[UPDATE] - Finalizada a versão final do sistema

--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -67,8 +67,8 @@ a {
 }
 
 .palavra a {
-    font-size: 30px;
-    text-decoration: none;,
+    font-size: 70px;
+    text-decoration: none;
 }
 
 .palavra a:hover:not(.palavra-correta){
@@ -76,13 +76,13 @@ a {
 }
 
 .letra-clicavel:hover{
-    font-size: 35px;
+    font-size: 72px;
     font-weight: bold;
 }
 
 .imagem-palavra {
     background: url("img/sprit.jpg");
-    margin-left: 18px;
+    margin-left: 110px;
     width: 135px;
     height: 130px;
     background-size: 590px;
